--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
   body {
-      background-image: url("assets/img/6e29209a7.jpg");
+      background-image: url("/assets/img/6e29209a7.jpg");
       background-color: #cccccc;
       height: 100%;
       width: 100%;
